src/objects/Station__c.object
<CustomObject>
    <fields>
        <fullName>Store__c</fullName>
        <label>Store</label>
        <referenceTo>Store__c</referenceTo>
        <relationshipLabel>Stations</relationshipLabel>
        <relationshipName>Stations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>idx__c</fullName>
        <displayFormat>ID-{0000}</displayFormat>
        <label>idx</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>location__c</fullName>
        <label>location</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Station</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
    </listViews>
    <nameField>
        <label>Station-Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>